--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,32 +2,49 @@
 // endbower
 
 
+@import 'sass/_custom-variables.scss';
+@import 'sass/_grid.scss';
 
-body {
-    background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
+/*BOOTSTRAP STYLE OVERRIDES*/
+.container-fluid{
+  max-width: $maxWidth;
+  width: 100%;
+  padding: 0;
+}
+.container-fluid .row{
+  margin-left: 0;
+  margin-right: 0;
+}
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12{
+  padding-left: $gutterWidth;
+  padding-right: $gutterWidth;
+  box-sizing: border-box;
 }
 
-.hero-unit {
-    margin: 50px auto 0 auto;
-    width: 300px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 30px;
-    background-color: #eee;
-    border-radius: 6px;
-    padding: 60px;
-    h1 {
-        font-size: 60px;
-        line-height: 1;
-        letter-spacing: -1px;
-    }
+//GENERAL STYLES
+body{
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+
+//TABLET GENERAL STYLES HERE
+@media screen and (min-width: 768px) and (max-width: 1024px){
+
+
 }
+
+//MOBILE GENERAL STYLES HERE
+@media (max-width: 767px) {
+  body{
+    font-size: 10px;
+  }
+}
+
+//SMALL MOBILE GENERAL STYLES HERE (MAY NOT NEED OR MAY ADJUST MAX-WIDTH)
+@media (max-width: 480px) {
+
+}
+
