added jquery and snappish for home animation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,7 @@
 
 @import 'application/_custom-variables';
 @import 'vendors/bootstrap/_bootstrap-custom';
+@import 'vendors/snappish/jquery.snappish';
 
 /*BOOTSTRAP STYLE OVERRIDES*/
 .container-fluid{
@@ -47,3 +48,6 @@ body{
 @media (max-width: 480px) {
 
 }
+
+//ADD CUSTOM APPLICATION FILES BELOW
+@import 'application/_home-animation';
