--- a/app/styles/application/_home-animation.scss
+++ b/app/styles/application/_home-animation.scss
@@ -5,6 +5,11 @@ body {
   padding: 0;
   margin: 0;
 }
+#home-area{
+  position:absolute;
+  width: 100%;
+  height: 100%;
+}
 article {
     background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0));
     text-align: center;
@@ -15,6 +20,7 @@ article {
     transition: background-color 1s ease;
     width: 100%;
     height: 100%;
+    position:relative;
 }
 
 #wrapper {
