--- a/app/styles/application/_home-animation.scss
+++ b/app/styles/application/_home-animation.scss
@@ -11,13 +11,13 @@ body {
   height: 100%;
 }
 article {
-    background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0));
+    //background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,0));
     text-align: center;
-    -webkit-transition: background-color 1s ease;
+    /*-webkit-transition: background-color 1s ease;
     -moz-transition: background-color 1s ease;
     -o-transition: background-color 1s ease;
     -ms-transition: background-color 1s ease;
-    transition: background-color 1s ease;
+    transition: background-color 1s ease;*/
     width: 100%;
     height: 100%;
     position:relative;
@@ -38,4 +38,16 @@ article {
     z-index: 100;
     font-size: 16px;
     text-align: center;
+}
+article.brand-story-1{
+  background-color: rgba(20,140,30,1);
+}
+article.brand-story-2{
+  background-color: rgba(200,150,130,1);
+}
+article.brand-story-3{
+  background-color: rgba(0,0,0,1);
+}
+article.brand-story-4{
+  background-color: rgba(100,0,50,1);
 }
