--- a/app/styles/application/_home-animation.scss
+++ b/app/styles/application/_home-animation.scss
@@ -4,6 +4,7 @@ body {
   overflow: hidden;
   padding: 0;
   margin: 0;
+  font-size: 12px;
 }
 #home-area{
   position:absolute;
@@ -13,11 +14,11 @@ body {
 article {
     //background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,0));
     text-align: center;
-    /*-webkit-transition: background-color 1s ease;
+    -webkit-transition: background-color 1s ease;
     -moz-transition: background-color 1s ease;
     -o-transition: background-color 1s ease;
     -ms-transition: background-color 1s ease;
-    transition: background-color 1s ease;*/
+    transition: background-color 1s ease;
     width: 100%;
     height: 100%;
     position:relative;
@@ -39,6 +40,33 @@ article {
     font-size: 16px;
     text-align: center;
 }
+article.welcome{
+  background-color: rgba(255,255,255,1);
+  .container-fluid{
+    position:relative;
+    height: 100%;
+    .col-sm-3.col-xs-12{
+      position:relative;
+      margin-top: 50%;
+      padding: 20px;
+      background: #000;
+      a, a:hover{
+        color: white;
+        font-size: 2.5em;
+      }
+    }
+    .down-arrow{
+      position:absolute;
+      width: 100px;
+      height: auto;
+      margin-left: -50px;
+      left: 50%;
+      bottom: 10px;
+      cursor: pointer;
+    }
+  }
+
+}
 article.brand-story-1{
   background-color: rgba(20,140,30,1);
 }
@@ -46,7 +74,7 @@ article.brand-story-2{
   background-color: rgba(200,150,130,1);
 }
 article.brand-story-3{
-  background-color: rgba(0,0,0,1);
+  background-color: rgba(0,20,100,1);
 }
 article.brand-story-4{
   background-color: rgba(100,0,50,1);
