--- a/app/styles/application/_home-animation.scss
+++ b/app/styles/application/_home-animation.scss
@@ -22,6 +22,8 @@ article {
     width: 100%;
     height: 100%;
     position:relative;
+    padding: 100px 0;
+    box-sizing: border-box;
 }
 
 #wrapper {
@@ -67,15 +69,7 @@ article.welcome{
   }
 
 }
-article.brand-story-1{
-  background-color: rgba(20,140,30,1);
-}
-article.brand-story-2{
-  background-color: rgba(200,150,130,1);
-}
-article.brand-story-3{
-  background-color: rgba(0,20,100,1);
-}
-article.brand-story-4{
-  background-color: rgba(100,0,50,1);
-}
+@import 'brand-stories/_brand-story-1';
+@import 'brand-stories/_brand-story-2';
+@import 'brand-stories/_brand-story-3';
+@import 'brand-stories/_brand-story-4';
