home page animations welcome section and 1st story section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@
 @import 'application/_custom-variables';
 @import 'vendors/bootstrap/_bootstrap-custom';
 @import 'vendors/snappish/jquery.snappish';
+@import 'vendors/_animate';
 
 /*BOOTSTRAP STYLE OVERRIDES*/
 .container-fluid{
