--- a/app/styles/application/_home.scss
+++ b/app/styles/application/_home.scss
@@ -12,18 +12,26 @@ body {
   height: 100%;
 }
 article {
-    background: linear-gradient(rgba(72,146,131,1), rgba(43,71,92,1));
+    background: -webkit-linear-gradient(right top, rgba(43,71,92,1),rgba(72,146,131,1));
+    background: -moz-linear-gradient(bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
+    background: linear-gradient(to bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
+    //background-color: rgba(43,71,92,1);
     text-align: center;
-    -webkit-transition: background-color 1s ease;
+    /*-webkit-transition: background-color 1s ease;
     -moz-transition: background-color 1s ease;
     -o-transition: background-color 1s ease;
     -ms-transition: background-color 1s ease;
-    transition: background-color 1s ease;
+    transition: background-color 1s ease;*/
     width: 100%;
     height: 100%;
     position:relative;
-    padding: 100px 0;
     box-sizing: border-box;
+
+  h1, h2, h3, h4{
+    color: #FFF;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 #wrapper {
@@ -42,57 +50,8 @@ article {
     font-size: 16px;
     text-align: center;
 }
-article.welcome{
-  .container-fluid{
-    position:relative;
-    height: 100%;
-
-    .page-title{
-      position:absolute;
-      height: 100%;
-      text-align:center;
-      h1{
-        color: #FFF;
-        font-weight: normal;
-        font-size: 3.5em;
-        position:relative;
-        top: 40%;
-        margin: 0;
-        padding: 0;
-      }
-    }
-
-    .col-sm-2{
-      position:relative;
-      margin-top: 50%;
-      padding: 20px;
-      border-right: 1px solid rgba(255,255,255,.3);
-      a, a:hover{
-        color: #FFF;
-        opacity: .7;
-        font-size: 1.333em;
-        text-decoration: none;
-      }
-      a:hover{
-        opacity: 1;
-      }
-    }
-    .col-sm-2.last{
-      border-right: none;
-    }
-    .down-arrow{
-      position:absolute;
-      width: 100px;
-      height: auto;
-      margin-left: -50px;
-      left: 50%;
-      bottom: 10px;
-      cursor: pointer;
-    }
-  }
-
-}
-@import 'brand-story/_story-1';
-@import 'brand-story/_story-2';
-@import 'brand-story/_story-3';
-@import 'brand-story/_story-4';
+@import 'brand-story-animations/_welcome';
+@import 'brand-story-animations/_story1';
+@import 'brand-story-animations/_story2';
+@import 'brand-story-animations/_story3';
+@import 'brand-story-animations/_story4';
