--- a/app/styles/application/_home.scss
+++ b/app/styles/application/_home.scss
@@ -44,8 +44,8 @@ article {
     left: 0;
     top: 0;
     right: 0;
-    height: 50px;
-    background: rgba(255,255,255,0.5);
+    /*height: 50px;
+    background: rgba(255,255,255,0.5);*/
     z-index: 100;
     font-size: 16px;
     text-align: center;
