--- a/app/styles/application/_menu.scss
+++ b/app/styles/application/_menu.scss
@@ -78,6 +78,8 @@ header{
     padding: 0 0 5em 0; /*60/12 (base font) */
     border-bottom: 1px solid #FFF;
     box-sizing:border-box;
+    width: 90%;
+    margin: 0 auto;
     li{
       display:block;
       text-align:center;
@@ -114,18 +116,37 @@ header{
 }
 
 @media screen and (max-width: 767px){
-
-  header{
-    .logo{
-
-    }
-
-  }
   .menu-overlay{
     height: auto;
     .fixed-top{
       position:relative;
       top: 0;
+    }
+    .logo{
+      padding-left: 1.5625%;
+      padding-right: 1.5625%;
+      box-sizing: border-box;
+    }
+    .close{
+      display:inline-block;
+      float: right;
+      position: relative;
+      top: 25px;
+      padding: 0;
+      right: 0;
+    }
+    .mobile-search{
+      border-radius: 0px;
+      border: 1px solid #FFF;
+      box-shadow: 0 0 0 0 rgba(0,0,0,0);
+      background: none;
+      color: white;
+      text-decoration:none;
+      -webkit-appearance: none;
+      width: 100%;
+      box-sizing: border-box;
+      padding: 10px;
+
     }
     .table{
       display:block;
@@ -134,10 +155,18 @@ header{
       }
     }
     ul.catLinks{
+      padding-top: 40px;
       li{
         a, a:hover{
           font-size: 3em;
         }
+      }
+    }
+    ul.bottomLinks{
+      margin: 0;
+      padding: 40px 0;
+      li.last{
+        border-left: none;
       }
     }
   }
