--- a/app/styles/application/_menu.scss
+++ b/app/styles/application/_menu.scss
@@ -1,3 +1,8 @@
+$menuLinkColor: #FFF;
+$menuLinkOnColor: #FFF;
+$menuFontColor: #FFF;
+$menuBgColor: #12b1c9;
+
 header{
   position: fixed;
   left: 0;
@@ -24,13 +29,13 @@ header{
       height: 60px;
     }
     .icn-menu{
-      background: url('../images/icn-menu.png') no-repeat center;
+      background: url('../images/sprite/icn-menu.png') no-repeat center;
     }
     .icn-search{
-      background: url('../images/icn-search.png') no-repeat center;
+      background: url('../images/sprite/icn-search.png') no-repeat center;
     }
     .icn-cart{
-      background: url('../images/icn-cart.png') no-repeat center;
+      background: url('../images/sprite/icn-cart.png') no-repeat center;
     }
   }
 }
@@ -39,8 +44,8 @@ header{
   position:absolute;
   width: 100%;
   height: 100%;
-  background-color: #12b1c9;
-  color: #FFF;
+  background-color: $menuBgColor;
+  color: $menuFontColor;
   box-sizing: border-box;
   display:none;
   z-index: 12;
@@ -58,7 +63,7 @@ header{
     position:relative;
     top: 20px;
     right: 20px;
-    background: url('../images/icn-close.png') no-repeat;
+    background: url('../images/sprite/icn-close.png') no-repeat;
     width: 23px;
     height: 21px;
   }
@@ -72,27 +77,30 @@ header{
     width: 100%;
     vertical-align:middle;
   }
-  ul.catLinks{
+  ul.cat-links{
     list-style-type:none;
     position:relative;
     padding: 0 0 5em 0; /*60/12 (base font) */
     border-bottom: 1px solid #FFF;
     box-sizing:border-box;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     li{
       display:block;
       text-align:center;
       padding-bottom: 3.3333em; /* 40/12 (base font)*/
         a, a:hover{
-          color: #FFF;
+          color: $menuLinkColor;
           font-size: 3.5em;
           text-decoration: none;
           font-weight: normal;
         }
+        a:hover{
+          color: $menuLinkOnColor;
+        }
     }
   }
-  ul.bottomLinks{
+  ul.bottom-links{
     list-style-type: none;
     padding-top: 3.3333em;
     li{
@@ -101,9 +109,12 @@ header{
       padding-top: 10px;
       padding-bottom: 10px;
       a, a:hover{
-        color: #FFF;
+        color: $menuLinkColor;
         font-size: 1.5em;
         text-decoration:none;
+      }
+      a:hover{
+        color: $menuLinkOnColor;
       }
     }
     li.last{
@@ -116,37 +127,93 @@ header{
 }
 
 @media screen and (max-width: 767px){
+  body.scroll{
+    overflow-y: scroll;
+  }
+  header{
+    .logo-mobile{
+      max-width: 100%;
+    }
+    li{
+      .icn-menu, .icn-search, .icn-cart{
+        background-repeat: no-repeat;
+        background-size: 50% auto;
+        background-position: right;
+      }
+      .icn-menu{
+        background-image: url('../images/sprite-mobile/icn-menu2x.png');
+      }
+      .icn-search{
+        background-image: url('../images/sprite-mobile/icn-search2x.png');
+      }
+      .icn-cart{
+        background-image: url('../images/sprite-mobile/icn-cart2x.png');
+      }
+    }
+  }
   .menu-overlay{
     height: auto;
+    .divider{
+      height: 1px;
+      background: white;
+      width: 100%;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
     .fixed-top{
       position:relative;
       top: 0;
     }
     .logo{
-      padding-left: 1.5625%;
-      padding-right: 1.5625%;
+      padding-left: 5%;
+      padding-right: 0%;
       box-sizing: border-box;
+      padding-bottom: 15px;
     }
     .close{
+      background-image: url('../images/sprite-mobile/icn-close2x.png');
+      background-repeat: no-repeat;
+      background-size: 19px auto;
+      background-position: right;
       display:inline-block;
       float: right;
       position: relative;
-      top: 25px;
+      top: 30px;
       padding: 0;
       right: 0;
     }
     .mobile-search{
+      background-image: url('../images/sprite-mobile/icn-search2x.png');
+      background-position: 10px center;
+      background-size: 20px auto;
+      background-repeat: no-repeat;
+      background-color: transparent;
       border-radius: 0px;
       border: 1px solid #FFF;
       box-shadow: 0 0 0 0 rgba(0,0,0,0);
-      background: none;
       color: white;
       text-decoration:none;
       -webkit-appearance: none;
-      width: 100%;
+      width: 95%;
       box-sizing: border-box;
-      padding: 10px;
+      padding: 10px 10px 10px 40px;
+      line-height: 1em;
+      font-size: 2.125em;
 
+    }
+    .mobile-top-links{
+      padding-top: 15px;
+      .col-xs-6{
+        text-align:center;
+        a, a:hover{
+          color: $menuLinkColor;
+          font-size: 1.5em;
+          text-decoration: none;
+        }
+        a:hover{
+          color: $menuLinkOnColor;
+        }
+      }
     }
     .table{
       display:block;
@@ -154,17 +221,26 @@ header{
         display: block;
       }
     }
-    ul.catLinks{
-      padding-top: 40px;
+    ul.cat-links{
+      padding: 0px;
+      width: 100%;
+      border-bottom: 0;
       li{
         a, a:hover{
+          color: $menuLinkColor;
           font-size: 3em;
         }
+        a:hover{
+          color: $menuLinkOnColor;
+        }
+      }
+      li.last{
+        padding-bottom: 0;
       }
     }
-    ul.bottomLinks{
+    ul.bottom-links{
       margin: 0;
-      padding: 40px 0;
+      padding: 0 0 30px 0;
       li.last{
         border-left: none;
       }
