--- a/app/styles/application/brand-story-animations/_story1.scss
+++ b/app/styles/application/brand-story-animations/_story1.scss
@@ -22,7 +22,15 @@ article#story-1{
         margin-top: 30px;
       }
     }
-
+    .down-arrow{
+      position:absolute;
+      width: 70px;
+      height: auto;
+      margin-left: -35px;
+      left: 50%;
+      bottom: 100px;
+      cursor: pointer;
+    }
   }
 
 }
