--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -38,7 +38,7 @@ article {
     height: 100%;
 }
 
-@import 'application/home/_welcome';
+@import 'partials/home/_welcome';
 
 @media screen and (max-width: 767px){
 
