--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -201,20 +201,6 @@ header{
       font-size: 2.125em;
 
     }
-    .mobile-top-links{
-      padding-top: 15px;
-      .col-xs-6{
-        text-align:center;
-        a, a:hover{
-          color: $menuLinkColor;
-          font-size: 1.5em;
-          text-decoration: none;
-        }
-        a:hover{
-          color: $menuLinkOnColor;
-        }
-      }
-    }
     .table{
       display:block;
       .vertical-wrap{
@@ -222,7 +208,7 @@ header{
       }
     }
     ul.cat-links{
-      padding: 0px;
+      padding: 15px 0 0 0px;
       width: 100%;
       border-bottom: 0;
       li{
@@ -240,9 +226,24 @@ header{
     }
     ul.bottom-links{
       margin: 0;
-      padding: 0 0 30px 0;
+      padding: 0;
       li.last{
         border-left: none;
+      }
+    }
+    .mobile-links{
+      padding-top: 0px;
+      padding-bottom: 30px;
+      .col-xs-6{
+        text-align:center;
+        a, a:hover{
+          color: $menuLinkColor;
+          font-size: 1.5em;
+          text-decoration: none;
+        }
+        a:hover{
+          color: $menuLinkOnColor;
+        }
       }
     }
   }
