--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -27,7 +27,6 @@ article {
     transition: background-color 1s ease;*/
     width: 100%;
     height: 100%;
-    position:relative;
     box-sizing: border-box;
 
   h1, h2, h3, h4{
@@ -53,6 +52,7 @@ article.welcome .catbg{
 
 }
 article.welcome{
+  position:absolute;
   .container-fluid{
     position:relative;
     height: 100%;
