--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -179,42 +179,68 @@ article.welcome#category-4{
 @media screen and (max-width: 767px){
   body{
     overflow-y: scroll;
+    background: -webkit-linear-gradient(right top, rgba(43,71,92,1),rgba(72,146,131,1));
+    background: -moz-linear-gradient(bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
+    background: linear-gradient(to bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
+  }
+  #home-area{
+    position:relative;
+    height: auto;
+    width: 100%;
+    background-image: url('../images/brandstory/mobile/bg-cat1.png');
+    background-position: center 300px;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+  }
+  article{
+    background: none;
+    position:relative;
+    height: auto;
+    width: 100%;
+    padding: 50px 0;
+    h2{
+      font-size: 3.5em;
+      font-weight: normal;
+    }
   }
   article.welcome{
+    .catbg{
+      display:none;
+    }
     position:relative;
+    width: auto;
+    height: auto;
+    padding: 150px 0 50px 0;
+    display:block;
     .container-fluid{
-      .down-arrow{
-        position:absolute;
-        width: 30px;
-        height: auto;
-        margin-left: -15px;
-        left: 50%;
-        bottom: 100px;
-        cursor: pointer;
-        display:block;
+      .page-title{
+        position:relative;
+        /*h2.category-1, h2.category-2, h2.category-3, h2.category-4, h2.category-5{
+          display:block;
+          padding: 50px 0;
+        }*/
       }
     }
   }
   article.category-1{
+    /*MAY USE FOR ANIMATIONS ON BRAND STORY PAGE
     background-color: #01202d;
     background-image: url('../images/brandstory/mobile/bg-cat1.png');
     background-position: center;
     background-size: 100% auto;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;*/
   }
   article.category-2{
-    background-color: #093e54;
+    /*background-color: #093e54;
     background-image: url('../images/brandstory/mobile/bg-cat2.png');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover;*/
   }
   article.category-3{
-    background: #176D90;
+    /*background: #176D90;*/
   }
   article.category-4{
-
   }
   article.category-5{
-
   }
 }
