--- a/app/styles/brandstory.scss
+++ b/app/styles/brandstory.scss
@@ -18,16 +18,19 @@ article {
     background: linear-gradient(to bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
     //background-color: rgba(43,71,92,1);
     text-align: center;
-    /*-webkit-transition: background-color 1s ease;
-    -moz-transition: background-color 1s ease;
-    -o-transition: background-color 1s ease;
-    -ms-transition: background-color 1s ease;
-    transition: background-color 1s ease;*/
     width: 100%;
     height: 100%;
     position:relative;
     box-sizing: border-box;
-
+    .down-arrow{
+      position:absolute;
+      width: 50px;
+      height: auto;
+      margin-left: -25px;
+      left: 50%;
+      bottom: 100px;
+      cursor: pointer;
+    }
   h1, h2, h3, h4{
     color: #FFF;
     padding: 0;
