--- a/app/styles/partials/brandstory/_story1.scss
+++ b/app/styles/partials/brandstory/_story1.scss
@@ -1,5 +1,9 @@
 article#story-1{
+  background: #053449;
   .container-fluid{
+    background-image: url('../images/brandstory/desktop/bg-story1.png');
+    background-repeat: no-repeat;
+    background-position: center;
     position:relative;
     width: 100%;
     height: 100%;
@@ -22,15 +26,7 @@ article#story-1{
         margin-top: 30px;
       }
     }
-    .down-arrow{
-      position:absolute;
-      width: 50px;
-      height: auto;
-      margin-left: -25px;
-      left: 50%;
-      bottom: 100px;
-      cursor: pointer;
-    }
+    
   }
 
 }
