--- a/app/styles/partials/brandstory/_story2.scss
+++ b/app/styles/partials/brandstory/_story2.scss
@@ -1,3 +1,11 @@
-article[data-url="brand-story-2"]{
-  background-color: rgba(200,150,130,1);
+article#story-2{
+  background: #053449 url('../images/brandstory/desktop/bg-story2.png');;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  .container-fluid{
+    position:relative;
+    width: 100%;
+    height: 100%;
+  }
 }
