--- a/app/styles/partials/brandstory/_story2.scss
+++ b/app/styles/partials/brandstory/_story2.scss
@@ -7,5 +7,13 @@ article#story-2{
     position:relative;
     width: 100%;
     height: 100%;
+    .subtext{
+      p{
+        color: $storyFontColor;
+        padding: 40px;
+        text-align:left;
+      }
+    }
   }
+
 }
