--- a/app/styles/brandstory.scss
+++ b/app/styles/brandstory.scss
@@ -38,11 +38,39 @@ article {
     padding: 0;
     margin: 0;
   }
+  .story-title{
+    position:absolute;
+    height: 100%;
+    padding-top:30%;
+    h3{
+      position:relative;
+      font-size: 2.5em;
+      color: $storyFontColor;
+      margin: 0;
+      padding: 0 0 10px 0;
+      border-bottom: 1px solid #FFF;
+    }
+    p{
+      position:relative;
+      color: $storyFontColor;
+      font-size: 1.5em;
+      margin-top: 30px;
+    }
+  }
 }
 
 #wrapper {
     width: 100%;
     height: 100%;
+}
+@media screen and (max-width: 767px) {
+  article{
+    .down-arrow{
+      width: 30px;
+      margin-left: -15px;
+    }
+  }
+
 }
 
 @import 'partials/brandstory/_story1';
