--- a/app/styles/brandstory.scss
+++ b/app/styles/brandstory.scss
@@ -5,7 +5,7 @@ $storyFontColor: #FFFFFF;
 body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   padding: 0;
   margin: 0;
 }
