--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -5,7 +5,7 @@ $homeFontColor: #FFF;
 body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-y: scroll;
   padding: 0;
   margin: 0;
 }
