--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -28,6 +28,7 @@ body{
   font-size: 12px;
   margin: 0;
   padding: 0;
+  overflow-y:scroll;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 
