home page tablet update (using mobile template)

--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -152,6 +152,15 @@ header{
 .menu-overlay.closed{
   display:block;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  .touch{
+    header{
+      background: rgba(43,75,84,.9);
+    }
+  }
+}
+
 @media screen and (max-width: 767px){
   body.scroll{
     overflow-y: scroll;
