--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -192,91 +192,100 @@ article.welcome#category-5{
     }
 }
 
-@media screen and (max-width: 767px){
-  body{
-    overflow-y: scroll;
-    background: -webkit-linear-gradient(right top, rgba(43,71,92,1),rgba(72,146,131,1));
-    background: -moz-linear-gradient(bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
-    background: linear-gradient(to bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
-  }
-  #home-area{
-    position:relative;
-    height: auto;
-    width: 100%;
-    background: none;
-  }
-  article{
-    background: none;
-    position:relative;
-    height: auto;
-    width: 100%;
-    padding: 50px 0;
-    h1, h2{
-      font-size: 3.5em;
-      font-weight: normal;
-      margin-bottom:15px;
-    }
-    p.larger{
-      font-size: 2.375em;
-      a, a:hover{
-        color:$homeLinkColor;
-        text-decoration: none;
-      }
-      a:hover{
-        color: $homeLinkOnColor;
-      }
 
+@media screen and (max-width: 1024px){
+  .touch{
+    .visible-xs.group{
+      display: block !important;
     }
-    p{
-      color: $homeFontColor;
-      font-size:1.6em;
+    .hidden-xs.page-title, .hidden-xs.links{
+      display: none !important;
     }
-  }
-  article.welcome{
-    .catbg{
-      display:none;
-    }
-    position:relative;
-    width: auto;
-    height: auto;
-    padding: 50px 0;
-    display:block;
-    .container-fluid{
-      .page-title{
-        position:relative;
-        /*h2.category-1, h2.category-2, h2.category-3, h2.category-4, h2.category-5{
-          display:block;
-          padding: 50px 0;
-        }*/
+      body{
+        overflow-y: scroll;
+        background: -webkit-linear-gradient(right top, rgba(43,71,92,1),rgba(72,146,131,1));
+        background: -moz-linear-gradient(bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
+        background: linear-gradient(to bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
       }
-    }
-  }
-  article.welcome#welcome{
-    background: none;
-  }
-  article
-  {
-    background-size:auto 80%;
-    background-position:center center;
-    background-repeat:no-repeat;
-  }
-  article.category-1{
-    min-height:228px;
-    /*background-image: url('../images/home/mobile/bg-global-ecommerce.png');*/
-  }
-  article.category-2{
-    min-height:198px;
-    background-image: url('../images/home/mobile/bg-location-intelligence.png');
-  }
-  article.category-3{
-    min-height:198px;
-    /*background: #176D90;*/
-  }
-  article.category-4{
-    min-height:198px;
-  }
-  article.category-5{
-    min-height:233px;
-    /*background-image: url('../images/home/mobile/bg-global-ecommerce.png');*/
+      #home-area{
+        position:relative;
+        height: auto;
+        width: 100%;
+        background: none;
+      }
+      article{
+        background: none;
+        position:relative;
+        height: auto;
+        width: 100%;
+        padding: 50px 0;
+        h1, h2{
+          font-size: 3.5em;
+          font-weight: normal;
+          margin-bottom:15px;
+        }
+        p.larger{
+          font-size: 2.375em;
+          a, a:hover{
+            color:$homeLinkColor;
+            text-decoration: none;
+          }
+          a:hover{
+            color: $homeLinkOnColor;
+          }
+
+        }
+        p{
+          color: $homeFontColor;
+          font-size:1.6em;
+        }
+      }
+      article.welcome{
+        .catbg{
+          display:none;
+        }
+        position:relative;
+        width: auto;
+        height: auto;
+        padding: 50px 0;
+        display:block;
+        .container-fluid{
+          .page-title{
+            position:relative;
+            /*h2.category-1, h2.category-2, h2.category-3, h2.category-4, h2.category-5{
+              display:block;
+              padding: 50px 0;
+            }*/
+          }
+        }
+      }
+      article.welcome#welcome{
+        background: none;
+      }
+      article
+      {
+        background-size:auto 80%;
+        background-position:center center;
+        background-repeat:no-repeat;
+      }
+      article.category-1{
+        min-height:228px;
+        /*background-image: url('../images/home/mobile/bg-global-ecommerce.png');*/
+      }
+      article.category-2{
+        min-height:198px;
+        background-image: url('../images/home/mobile/bg-location-intelligence.png');
+      }
+      article.category-3{
+        min-height:198px;
+        /*background: #176D90;*/
+      }
+      article.category-4{
+        min-height:198px;
+      }
+      article.category-5{
+        min-height:233px;
+        /*background-image: url('../images/home/mobile/bg-global-ecommerce.png');*/
+      }
   }
 }
