--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -114,7 +114,7 @@ article.welcome{
       margin-top: 0;
       /*min-height: 80px;
       border-right: 1px solid rgba(255,255,255,.3);*/
-      padding: 0;
+      padding: 0 1.5625%;
       a, a:hover{
         color: $homeLinkColor;
         font-size: 1.333em;
