--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -39,7 +39,7 @@ header{
     }
   }
 }
-
+.search-overlay,
 .menu-overlay{
   position:absolute;
   top: 0;
@@ -184,6 +184,37 @@ header{
       }
     }
   }
+  .search-overlay{
+    .mobile-search{
+      background-image: url('../images/sprite-mobile/icn-search2x.png');
+      background-position: 10px center;
+      background-size: 20px auto;
+      background-repeat: no-repeat;
+      background-color: transparent;
+      border-radius: 0px;
+      border: 1px solid #FFF;
+      box-shadow: 0 0 0 0 rgba(0,0,0,0);
+      color: white;
+      text-decoration:none;
+      -webkit-appearance: none;
+      width: 95%;
+      box-sizing: border-box;
+      padding: 10px 10px 10px 40px;
+      line-height: 1em;
+      font-size: 2.125em;
+    }
+    .search-clear{
+        position:absolute;
+        top:35px;
+        right:5%;
+        padding-right:10px;
+        font-size: 1.5em;
+        color:$menuLinkColor;
+        text-decoration:none;
+        text-transform:uppercase;
+    }
+  }
+  .search-overlay,
   .menu-overlay{
     min-height: 100%;
     height: 100%;
@@ -218,25 +249,6 @@ header{
       padding: 0;
       right: 0;
     }
-    .mobile-search{
-      background-image: url('../images/sprite-mobile/icn-search2x.png');
-      background-position: 10px center;
-      background-size: 20px auto;
-      background-repeat: no-repeat;
-      background-color: transparent;
-      border-radius: 0px;
-      border: 1px solid #FFF;
-      box-shadow: 0 0 0 0 rgba(0,0,0,0);
-      color: white;
-      text-decoration:none;
-      -webkit-appearance: none;
-      width: 95%;
-      box-sizing: border-box;
-      padding: 10px 10px 10px 40px;
-      line-height: 1em;
-      font-size: 2.125em;
-
-    }
     .table{
       display:block;
       .vertical-wrap{
@@ -250,7 +262,7 @@ header{
       li{
         a, a:hover{
           color: $menuLinkColor;
-          font-size: 3em;
+          font-size: 2.5em;
         }
         a:hover{
           color: $menuLinkOnColor;
@@ -268,6 +280,9 @@ header{
         text-align:center;
         padding-right: 0;
         float:left;
+        a, a:hover{
+          font-size: 1.875em;
+        }
       }
       li.last{
         border-left: none;
@@ -281,7 +296,7 @@ header{
         text-align:center;
         a, a:hover{
           color: $menuLinkColor;
-          font-size: 1.5em;
+          font-size: 1.875em;
           text-decoration: none;
         }
         a:hover{
