--- a/app/styles/category.scss
+++ b/app/styles/category.scss
@@ -1,7 +1,6 @@
 header{
-
+  background: rgba(43,75,84,.9);
 }
-
 .main-content{
   .hero-wrapper{
     background-image: url('../images/home/bg-location-intelligence.png');
@@ -10,10 +9,11 @@ header{
     position:relative;
     .headline{
       text-align:center;
-      padding: 150px 0;
+      padding-top: 150px;
+      padding-bottom: 150px;
     }
   }
   .category-content{
-    height: 1000px;
+    height: 200px;
   }
 }
