--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -39,6 +39,15 @@ header{
     }
   }
 }
+.headroom{
+  transition: transform 200ms linear;
+}
+.headroom--pinned {
+  transform: translateY(0%);
+}
+.headroom--unpinned{
+  transform: translateY(-100%);
+}
 .search-overlay,
 .menu-overlay{
   position:absolute;
