--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -155,8 +155,36 @@ header{
     }
   }
 }
+/* these were mobile I moved them out for now */
 .search-overlay{
-  display:block;
+  .mobile-search{
+    background-image: url('../images/sprite-mobile/icn-search2x.png');
+    background-position: 10px center;
+    background-size: 20px auto;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    border-radius: 0px;
+    border: 1px solid #FFF;
+    box-shadow: 0 0 0 0 rgba(0,0,0,0);
+    color: white;
+    text-decoration:none;
+    -webkit-appearance: none;
+    width: 95%;
+    box-sizing: border-box;
+    padding: 10px 10px 10px 40px;
+    line-height: 1em;
+    font-size: 2.125em;
+  }
+  .search-clear{
+      position:absolute;
+      top:35px;
+      right:5%;
+      padding-right:10px;
+      font-size: 1.5em;
+      color:$menuLinkColor;
+      text-decoration:none;
+      text-transform:uppercase;
+  }
 }
 .menu-overlay.open{
   display:block;
@@ -194,36 +222,6 @@ header{
       .icn-cart{
         background-image: url('../images/sprite-mobile/icn-cart2x.png');
       }
-    }
-  }
-  .search-overlay{
-    .mobile-search{
-      background-image: url('../images/sprite-mobile/icn-search2x.png');
-      background-position: 10px center;
-      background-size: 20px auto;
-      background-repeat: no-repeat;
-      background-color: transparent;
-      border-radius: 0px;
-      border: 1px solid #FFF;
-      box-shadow: 0 0 0 0 rgba(0,0,0,0);
-      color: white;
-      text-decoration:none;
-      -webkit-appearance: none;
-      width: 95%;
-      box-sizing: border-box;
-      padding: 10px 10px 10px 40px;
-      line-height: 1em;
-      font-size: 2.125em;
-    }
-    .search-clear{
-        position:absolute;
-        top:35px;
-        right:5%;
-        padding-right:10px;
-        font-size: 1.5em;
-        color:$menuLinkColor;
-        text-decoration:none;
-        text-transform:uppercase;
     }
   }
   .search-overlay,
