--- a/app/styles/category.scss
+++ b/app/styles/category.scss
@@ -22,6 +22,17 @@ header{
       padding-bottom: 150px;
     }
   }
+  .page-container{
+    position:relative;
+    height: 700px;
+  }
+  .page-content{
+    position:absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+  }
   .category-content{
 
     .tab{
