fixed y scroll from link height set to 100%

--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -104,6 +104,7 @@ article{
     .links{
       position:relative;
       top: 80%;
+      height: auto;
     }
     .cat{
       position:relative;
